# SampleDisco

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  SampleDisc.py  cluster.py  environment-cpu.yml  environment-gpu.yml  plot.err  plot.out  pyproject.toml  requirements-gpu.txt  requirements.txt  review.txt  rmm_log.txt  test.err  test.out
.github/workflows/: release.yml
Benchmark_covid/: benchmark_ENCODE.py  benchmark_eye.py  benchmark_eye_2d.py  benchmark_heart.py  benchmark_long_covid.py  monitor_wrapper.py  other_benchmark_wrapper.py  rank.py  run_time_summary.py
Benchmark_multiomics/: benchmark_eye.py  benchmark_heart.py  benchmark_metircs_ENCODE.py  cell_embedding_effectiveness.py  metrics_visualization.py  paired_visualization.py
_deprecated/: EMD.py  Kmeans_cluster.py  README.md  consumer.py  requirement.txt.pipfreeze
archive/: multi_omics_gene_activity_knn.py
claude/: _run_merge_remaining.py  _test_merge_one.py  add_batch_agegroup_col.py  alpha_sweep_diemb.py  annotate_alpha_sweep_and_write_summary.py  bench_mo_fixes.py  build_benchmark_ready_h5ad.py  cca_vs_alpha_sweep.py  check_cell_level_batch_leak.py  check_health_aging_PBMC_join.py  cluster_resolution_sweep.py  compare_diemb_vs_unpaired_test.py  compute_paired_v2.py  continue_se_unpaired.py  debug_unpaired_test.py  dge_pc8_balanced_extremes.py  dge_pc8_clusters.py  diagnose_obsm_loss.py  diemb_build_rna_pseudobulk.py  diemb_concordance_shuffle_baseline.py  diemb_propagate_celltype_to_union.py  diemb_proportion_actual_vs_reconciled.py  diemb_raisin_summary.py  diemb_raisin_zscore_heatmaps.py  diemb_step0_rna_preprocess.py  diemb_step1_celltypist.py  diemb_step2to4_annotate_cluster_reconcile.py  diemb_step5to7_downstream.py  explore_batches.py  heart_v2_patch.py  inspect_assoc_targets.py  inspect_health_aging_PBMC.py  kmeans_pc8_sex.py  merge_fine_names_to_h5ads.py  paper_gene_lookup.py  per_celltype_age_dge.py  pipeline_unpaired_test.py  pipeline_unpaired_test_v2.py  plot_autotuned_embeddings.py  plot_best_two_pc_age.py  (+29 more)
claude/_archive/: add_sample_id.py  bench_mo_fixes.py  clean_and_verify.py  (+7 more)
config/: config.yaml  config_aifi.yaml  config_benchmark_ENCODE.yaml  config_blood.yaml  config_covid_rna.yaml  config_covid_rna_smoke.yaml  config_covid_rna_smoke_autotune.yaml  config_covid_rna_smoke_autotune_full.yaml  config_covid_rna_smoke_cpu.yaml  config_linux.yaml  config_linux_v2_filename.yaml  config_linux_v3_gpu.yaml  config_linux_v4_autotune_batch.yaml  config_linux_v4_autotune_filename.yaml  config_linux_v5_batch_plus_age.yaml  config_linux_v5_trajectory_age.yaml  config_linux_v6_multicov.yaml  config_linux_v7_kmeans_sex.yaml  config_long_covid.yaml  config_paired_eye.yaml  config_paired_heart.yaml  config_tabula.yaml  config_unpaired.yaml  config_unpaired_RNA_tune.yaml
gene_activity/: ATAC_peak_annotation.py
parameter_selection/: autotune.py
preparation/: ATAC_cell_type.py  ATAC_cell_type_gpu.py  atac_preprocess_cpu.py  atac_preprocess_gpu.py  cell_type_cpu.py  cell_type_gpu.py  multi_omics_batch_correction.py  multi_omics_cell_type_cpu.py  multi_omics_cell_type_gpu.py  multi_omics_glue.py  multi_omics_merge.py  multi_omics_preprocess.py  rna_preprocess_cpu.py  rna_preprocess_gpu.py
sample_association/: association.py
sample_clustering/: HRA_VEC.py  HRC_VEC.py  NN.py  RAISIN.py  RAISIN_TEST.py  UPGMA.py  cluster_helper.py  consensus.py  proportion_test.py  tree_cut.py
sample_distance/: ChiSquare.py  jensenshannon.py  sample_distance.py
sample_embedding/: __init__.py  blocks.py  sample_embedding.py  sample_embedding_gpu.py
sample_prediction/: predict_sample_phenotype.py
sample_trajectory/: CCA.py  CCA_test.py  TSCAN.py  multi_omics_CCA_test.py  trajectory_diff_gene.py
utils/: Grouping.py  imbalance_cell_type_handler.py  inspector.py  limma.py  merge_sample_meta.py  safe_save.py  slim_adata.py  subsample.py  tf_idf.py
visualization/: ATAC_visualization.py  multi_omics_visualization.py  visualization_embedding.py  visualization_helper.py  visualization_other.py
wrapper/: atac_wrapper.py  multiomics_wrapper.py  rna_wrapper.py  wrapper.py
(+81 files in other folders)
