# Packaging metadata for SampleDisco.
# Installable as a normal package (src/ layout): `pip install -e .` exposes the
# `sampledisco` import and the `sampledisco` console command from anywhere — no
# more `cd code && python SampleDisc.py`. Core deps are declared in
# requirements.txt; optional GPU acceleration is in requirements-gpu.txt.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sampledisco"
version = "0.1.0"
description = "Cross-omics, cross-condition sample embedding for single-cell data (RNA + ATAC)"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
sampledisco = "sampledisco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
