# Packaging metadata for SampleDisco.
# Installable as a normal package (src/ layout): `pip install -e .` exposes the
# `sampledisco` import and the `sampledisco` console command from anywhere — no
# more `cd code && python SampleDisc.py`. Core deps are declared in
# requirements.txt; optional GPU acceleration is in requirements-gpu.txt.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sampledisco"
version = "0.1.4"
description = "Cross-omics, cross-condition sample embedding for single-cell data (RNA + ATAC)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Harry Jiang", email = "hjiang55@jh.edu" },
    { name = "Hongkai Ji" },
]
keywords = ["single-cell", "sample-embedding", "multi-omics", "scRNA-seq", "scATAC-seq", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/J041120h/GenoDistance"
Documentation = "https://j041120h.github.io/SampleDisco_tutorial/"
Repository = "https://github.com/J041120h/GenoDistance"

[project.scripts]
sampledisco = "sampledisco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
