# Packaging metadata for SampleDisco.
# Installable as a normal package (src/ layout): `pip install -e .` exposes the
# `sampledisco` import and the `sampledisco` console command from anywhere — no
# more `cd code && python SampleDisc.py`. Core deps are declared in
# requirements.txt; optional GPU acceleration is in requirements-gpu.txt.
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sampledisco"
version = "0.2.0"
description = "Cross-omics, cross-condition sample embedding for single-cell data (RNA + ATAC)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Harry Jiang", email = "hjiang55@jh.edu" },
    { name = "Hongkai Ji" },
]
keywords = ["single-cell", "sample-embedding", "multi-omics", "scRNA-seq", "scATAC-seq", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/J041120h/GenoDistance"
Documentation = "https://j041120h.github.io/SampleDisco_tutorial/"
Repository = "https://github.com/J041120h/GenoDistance"

[project.scripts]
sampledisco = "sampledisco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sampledisco = ["config/*.yaml"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
